# mFHN-equation-explicit-solver

./: .gitignore  CMakeLists.txt  README.md  config.json  config_template.json
src/: config.cpp  config.h  cuda_utils.h  h5_exporter.cpp  h5_exporter.h  logger.h  main.cu  params.h  solver_explicit.cu  solver_explicit.cuh
utils/: plot_snapshots.py
